# java-manifest-py

./: .flake8  .gitignore  .travis.yml  README.md  java_manifest.py  java_manifest_test.py  pyproject.toml
java_manifest/: __init__.py
