[tool.isort]
# Make isort agree with black
multi_line_output = 3
include_trailing_comma = true

[tool.poetry]
name = "java-manifest"
version = "1.1.0"
description = "Encode/decode Java's META-INF/MANIFEST.MF in Python"
authors = ["Eli W. Hunter <elihunter173@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/elihunter173/java-manifest-py"
keywords = ["java", "jar", "manifest"]
# So we get marked as a package with type annotations
include = ["java_manifest/py.typed"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
isort = "^4.3.21"
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-bugbear = "^20.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
